[gd_scene load_steps=4 format=3 uid="uid://j510y6t6buvp"]

[ext_resource type="Script" uid="uid://65j3mletlqhi" path="res://scripts/social_media.gd" id="1_b2133"]

[sub_resource type="LabelSettings" id="LabelSettings_b2133"]

[sub_resource type="LabelSettings" id="LabelSettings_lbcdr"]

[node name="Social Media" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00729, 1)
script = ExtResource("1_b2133")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Header/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer/Header/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "x"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Header/HBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Header/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "<social media name>"
label_settings = SubResource("LabelSettings_b2133")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
alignment = 1

[node name="Feed" type="Button" parent="PanelContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Feed"

[node name="AddPost" type="Button" parent="PanelContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Add post
"

[node name="Posts" type="Button" parent="PanelContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Your posts"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 220
alignment = 1

[node name="Footer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Footer"]
layout_mode = 2
text = "<footer>"
label_settings = SubResource("LabelSettings_lbcdr")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/HBoxContainer2/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/HBoxContainer/Feed" to="." method="_on_feed_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/HBoxContainer/AddPost" to="." method="_on_add_post_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/HBoxContainer/Posts" to="." method="_on_posts_pressed"]
